--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,11 @@
 <ul>
     <li><a th:href="@{/register}">📝 Registrati come nuovo utente</a></li>
     <li><a th:href="@{/login}">🔑 Accedi (Login)</a></li>
+    <li>
+        <a th:href="@{/marketplace}">
+            🛒 Visualizza Marketplace
+        </a>
+    </li>
 </ul>
 
 <hr/>
