crea prodotto - springboot

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -89,6 +89,7 @@
             <option value="PRODUTTORE">Produttore</option>
             <option value="ACQUIRENTE">Acquirente</option>
             <option value="CURATORE">Curatore</option>
+            <option value="DISTRIBUTORE_TIPICITA">Distributore</option>
         </select>
         <p th:if="${#fields.hasErrors('ruolo')}" th:errors="*{ruolo}" class="field-error"></p>
     </div>
