--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -79,6 +79,7 @@
             <option value="ACQUIRENTE">Acquirente</option>
             <option value="CURATORE">Curatore</option>
             <option value="DISTRIBUTORE_TIPICITA">Distributore</option>
+            <option value="TRASFORMATORE">Trasformatore</option>
         </select>
     </div>
 
